--- a/demo.html
+++ b/demo.html
@@ -12,13 +12,15 @@
     <!-- Bootstrap core CSS -->
     <link href="assets/styles/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <!--font-->
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/styles/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
-  <body>
+  <body id="grad">
   	<form action="welcome.php" method="post">
-  	<div class="container">
+  	<div class="container"> 
   		<div class="row justify-content-center">
       		<div class="card login-wrapper">
       			<div class="card-title">
@@ -31,7 +33,7 @@
       					<div class="form-group">
       						<label for="name">Password</label>
       						<input type="password" class="form-control" name="password" placeholder="Enter your password" required="">
-      						<input type="submit" name="submit" class="btn btn-primary" value="Submit">
+      						<input type="submit" name="submit" class="btn" value="Submit">
       					</div>
       				</div>
       			</div>
